commit two layer net

--- a/NeuralNetwork/4. gradient.ipynb
+++ b/NeuralNetwork/4. gradient.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-06T15:01:09.929066Z",
-     "start_time": "2025-08-06T15:01:09.924244Z"
+     "end_time": "2025-08-07T03:52:13.771166Z",
+     "start_time": "2025-08-07T03:52:13.764991Z"
     }
    },
    "source": [
@@ -30,22 +30,27 @@
     "        x[idx] = tmp\n",
     "    return grad\n",
     "\n",
-    "numerical_gradient(f1, np.array([3.0, 4.0, 5.0, 6.0])) #必须是float\n",
-    "\n"
+    "numerical_gradient(f1, np.array([3.0, 4.0])) #必须是float\n",
+    "\n",
+    "def gradient_descent(f, init_x, lr = 0.01, step_num = 100):\n",
+    "    x = init_x.copy()\n",
+    "    for i in range(step_num):\n",
+    "        grad = numerical_gradient(f, x)\n",
+    "        x -= lr * grad\n",
+    "    return x\n",
+    "\n",
+    "print(gradient_descent(f1, np.array([-3.0, 4.0]), lr = 0.1, step_num = 100))\n"
    ],
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 6.,  8., 10., 12.])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-6.11110793e-10  8.14814391e-10]\n"
+     ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 6
   }
  ],
  "metadata": {
